Node.cpp and header added into their repected folders

--- a/tic-tac-toe.vcxproj
+++ b/tic-tac-toe.vcxproj
@@ -130,6 +130,10 @@
     <ClCompile Include="gameBroad.cpp" />
     <ClCompile Include="gameBroad.h" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="Node.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="Node.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
