Working on minimax gives me brain damage.

--- a/tic-tac-toe.vcxproj
+++ b/tic-tac-toe.vcxproj
@@ -130,10 +130,10 @@
     <ClCompile Include="gameBroad.cpp" />
     <ClCompile Include="gameBroad.h" />
     <ClCompile Include="main.cpp" />
-    <ClCompile Include="Node.cpp" />
+    <ClCompile Include="MiniMax.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="Node.h" />
+    <ClInclude Include="MiniMax.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
