--- a/tic-tac-toe.vcxproj.filters
+++ b/tic-tac-toe.vcxproj.filters
@@ -22,5 +22,8 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="MiniMax.h" />
+    <ClInclude Include="Node.h">
+      <Filter>header</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
