--- a/tic-tac-toe.vcxproj
+++ b/tic-tac-toe.vcxproj
@@ -137,6 +137,9 @@
     <ClInclude Include="MiniMax.h" />
     <ClInclude Include="Node.h" />
   </ItemGroup>
+  <ItemGroup>
+    <Text Include="Notes.txt" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
